namespaces/live.cloud-platform.service.justice.gov.uk/dpr-bodmis-port-forwarder/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dpr-bodmis-port-forwarder
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dpr_cicd_alerts"
    cloud-platform.justice.gov.uk/application: "DPR to Bodmis Port Forwarder"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Reporting: hari.chintala@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/dpr-cp-bodmis-portforwarder.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-digital-prison-reporting"
    cloud-platform.justice.gov.uk/review-after: "2023-09-28"
